Commit slightly modified version of patch provided by Thomas Friedrichsmeier to fix bug 153375 (select all not correctly rendered)

The only modification was to place the update call after the sanity checks, if the tagging was not for lines on the view, we don't need to update at this point.

BTW, much of this will have to be re-done post 4.0 in order to fix an entirely separate issue (memory usage terrible for large files without newlines)

BUG:153375

svn path=/trunk/KDE/kdelibs/kate/; revision=745398